# ts6-musicbot

./: .gitignore  Dockerfile  README.md  docker-compose.yml
bot/: main.py  requirements.txt
bot/audio/: player.py  resolver.py
bot/commands/: parser.py
bot/tests/: test_chat_listener.py  test_parser.py  test_resolver.py  test_webquery.py
bot/ts6/: chat_listener.py  webquery.py
bot/ts_voice/: audiobot_client.py  ts3voice_client.py
scripts/: entrypoint.sh  launch_ts6.sh  setup_audio.sh  start-vps.sh
ts3audiobot/: generate_config.sh  rights.toml  ts3audiobot.toml
ts3voice/: Cargo.toml
ts3voice/src/: main.rs
ts6_config/: settings.ini
