[package]
name = "ts3voice"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ts3voice"
path = "src/main.rs"

[dependencies]
tsclientlib = "0.2"
tsproto-packets = "0.1"
audiopus = "0.2"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
